# qucs-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: voltage_divider.py
src/qucs_mcp/: __init__.py  config.py  kicad.py  netlist.py  results.py  schematic.py  server.py  simulator.py  utils.py
tests/: conftest.py  test_kicad.py  test_netlist.py  test_results.py  test_schematic.py  test_simulator.py
