[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qucs-mcp"
version = "0.1.0"
description = "MCP server for Qucs/uSimmics circuit simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "qucs", "circuit", "simulation", "eda"]

dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
qucs-mcp = "qucs_mcp.server:main"

[tool.hatchling.build]
packages = ["src/qucs_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/qucs_mcp"]
omit = ["*/tests/*"]
